--- a/data/index.html
+++ b/data/index.html
@@ -21,9 +21,9 @@
     </nav>
 
     <div class="position-relative">
-        <select id="method" class="form-select form-control position-absolute w-25 m-3" style="left: 0; top: 0;">
+        <select id="method" class="form-select form-control position-absolute m-3" style="width: 20%; left: 0; top: 0;">
             <option value="0">Método</option>
-            <option value="1" selected>Jacobi</option>
+            <option value="1">Jacobi</option>
             <option value="2">Gauss-Seidel</option>
           </select>
           <div class="w-25 position-absolute d-flex justify-content-end m-3" style="right: 0; top: 0;">
@@ -39,11 +39,15 @@
             <div class="col-md-6">
                 <h6 class="m-0">Digita el tamaño de la Matriz: </h6>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <input type="number" id="cantMA" style="text-align: right;" class="form-control" placeholder="1" value="3">
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <p class="m-0"> x <span id="cantMATxt"></span></p>
+            </div>
+            <div class="col-md-2 d-flex flex-row">
+                <button id="randomButton" class="btn btn-info mx-2" title="Llenar de números aleatorios la matriz"><i class="fa fa-random"></i></button>
+                <button id="eraseMatrix" class="btn btn-danger d-none mx-2" title="Borrar los campos de la matriz"><i class="fa fa-eraser"></i></button>
             </div>
         </div>
     </div>
