--- a/data/eqSystem.html
+++ b/data/eqSystem.html
@@ -20,34 +20,33 @@
         </div>
     </nav>
 
-    <div class="position-relative">
-        <select id="method" class="form-select form-control position-absolute m-3" style="width: 20%; left: 0; top: 0;">
-            <option value="0">Método</option>
-            <option value="1">Jacobi</option>
-            <option value="2">Gauss-Seidel</option>
-          </select>
-          <div class="w-25 position-absolute d-flex justify-content-end m-3" style="right: 0; top: 0;">
-            <div class="w-50 d-flex flex-row justify-content-right align-items-center">
-                <p class="m-0 mx-3">Iteraciones:</p>
-                <input type="number" id="iter" class="form-control" placeholder="1" value="5">
-            </div>
-          </div>
-    </div>
+    <h5 class="display-4 text-center m-0 my-3">Sistema de Ecuaciones Lineales</h5>
 
-    <div class="w-100 d-flex justify-content-center mt-3">
-        <div class="row d-flex align-items-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <select id="method" class="form-select form-control">
+                    <option value="0">Método</option>
+                    <option value="1">Jacobi</option>
+                    <option value="2">Gauss-Seidel</option>
+                </select>
+            </div>
             <div class="col-md-6">
-                <h6 class="m-0">Digita el tamaño de la Matriz: </h6>
+                <div class="d-flex flex-row justify-content-center align-items-center">
+                    <h6 class="m-0 mx-2">Digita el tamaño de la Matriz: </h6>
+                    <input type="number" id="cantMA" style="text-align: right; width: 10%;" class="form-control mx-2" placeholder="1" value="3">
+                    <p class="m-0 mx-2"> x <span id="cantMATxt"></span></p>
+                    <div class="d-flex flex-row">
+                        <button id="randomButton" class="btn btn-info mx-2" title="Llenar de números aleatorios la matriz"><i class="fa fa-random"></i></button>
+                        <button id="eraseMatrix" class="btn btn-danger d-none mx-2" title="Borrar los campos de la matriz"><i class="fa fa-eraser"></i></button>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-2">
-                <input type="number" id="cantMA" style="text-align: right;" class="form-control" placeholder="1" value="3">
-            </div>
-            <div class="col-md-2">
-                <p class="m-0"> x <span id="cantMATxt"></span></p>
-            </div>
-            <div class="col-md-2 d-flex flex-row">
-                <button id="randomButton" class="btn btn-info mx-2" title="Llenar de números aleatorios la matriz"><i class="fa fa-random"></i></button>
-                <button id="eraseMatrix" class="btn btn-danger d-none mx-2" title="Borrar los campos de la matriz"><i class="fa fa-eraser"></i></button>
+            <div class="col-md-3">
+                <div class="d-flex flex-row justify-content-right align-items-center">
+                    <p class="m-0 mx-3">Iteraciones:</p>
+                    <input type="number" id="iter" class="form-control" placeholder="1" value="5">
+                </div>
             </div>
         </div>
     </div>
@@ -57,7 +56,7 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="d-flex justify-content-center align-items-center">
-                        <p class="m-0">A=</p>
+                        <p class="m-0">$$A=$$</p>
                         <div id="AMatrix" class="w-100"></div>
                     </div>
                 </div>
@@ -66,8 +65,8 @@
                 </div>
                 <div class="col-md-2">
                     <div class="h-100 d-flex justify-content-start align-items-center">
-                        <p class="m-0">b=</p>
-                        <div id="bVector" class="w-100 h-100 px-3 py-2 d-flex flex-column justify-content-between"></div>
+                        <p class="m-0">$$b=$$</p>
+                        <div id="bVector" class="w-100"></div>
                     </div>
                 </div>
             </div>
@@ -99,6 +98,6 @@
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <!-- <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML"></script> -->
 <!-- <script id="MathJax-script" async src="./node_lib/mathjax/es5/tex-mml-chtml.js"></script> -->
-<script src="./js/main.js"></script>
+<script src="./js/eqSystem.js"></script>
 </body>
 </html>
