--- a/data/eqSystem.html
+++ b/data/eqSystem.html
@@ -57,7 +57,7 @@
                 <div class="col-md-9">
                     <div class="d-flex justify-content-center align-items-center">
                         <p class="m-0">$$A=$$</p>
-                        <div id="AMatrix" class="w-100"></div>
+                        <div id="AMatrix" class="w-100" style="overflow: auto;"></div>
                     </div>
                 </div>
                 <div class="col-md-1">
@@ -70,21 +70,22 @@
                     </div>
                 </div>
             </div>
-            <button type="submit" class="btn btn-success w-100">Calcular</button>
+            <div class="w-100 d-flex flex-row align-items-center">
+                <button type="submit" class="btn btn-success btn-block my-3"><i class="fa fa-subscript"></i> Calcular</button>
+                <div id="Spinner" class="mx-3 d-none">
+                    <div class="spinner-border text-success" role="status"></div>
+                </div>
+            </div>
         </div>
     </form>
-
-    <div id="Spinner" class="w-100 mt-3 d-none d-none justify-content-center">
-        <div class="spinner-border text-primary" role="status"></div>
-    </div>
 
 <!-- <script src="./node_lib/jquery/dist/jquery.min.js"></script>
 <script src="./node_lib/popper.js/dist/umd/popper.min.js"></script>
 <script src="./node_lib/bootstrap/dist/js/bootstrap.min.js"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+<script src="eel.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
-<script src="eel.js"></script>
 <script>
     MathJax = {
         tex: {
